Update tag count after moving.

Marcel, can this be a performance problem? For me this was nearly instant. The thing is, normally we know the counts before moving, so we could manipulate the count map directly, but this is the more safe way to my mind.

CCMAIL: marcel.wiesweg@gmx.net
BUG: 229574

svn path=/trunk/extragear/graphics/digikam/; revision=1100051