digikam/albummanager.cpp
@@ -2203,6 +2203,9 @@ bool AlbumManager::moveTAlbum(TAlbum* album, TAlbum *newParent, QString& errMsg)
     emit signalAlbumMoved(album);
     d->currentlyMovingAlbum = 0;
 
+    // update tag count
+    getTagItemsCount();
+
     return true;
 }
 
